# assignment-1_mkaushik

./: .gitmodules  CMakeLists.txt  build.sh  build_log.txt  clean.sh  full-test.sh  manual-linux.sh  runqemu.sh  trigger.txt  unit-test.sh  writer.c
.github/workflows/: github-actions.yml
base_external/: Config.in  external.desc  external.mk
base_external/configs/: aesd_qemu_defconfig
base_external/package/aesd-assignments/: Config.in  aesd-assignments.mk
base_external/rootfs_overlay/etc/finder-app/conf/: username.txt
base_external/rootfs_overlay/home/: autorun-qemu.sh  finder-test.sh  finder.sh
examples/autotest-validate/: autotest-validate.c
examples/systemcalls/: systemcalls.c
examples/threading/: Makefile  threading.c  threading.h
finder-app/: Makefile  finder-test.sh  manual-linux.sh  writer  writer.c  writer.sh
server/: Makefile  aesdsocket  aesdsocket-start-stop  aesdsocket.c
student-test/assignment1/: Test_validate_username.c
